--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,25 +8,21 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
-.list-group {
-  display: grid;
-  grid-template-columns: repeat($grid-columns, 1fr);
-  gap: $gap;
-  padding-top: 5vw;
-  padding-bottom: 5vw;
+#grid {
+  padding: 2vw;
+  width: 100%;
+  height: 100%;
 }
 
-.list-group-item {
-  border: none;
-  padding: 0;
-}
-
-.image-from-library {
-  width: $square-dimensions;
-  height: $square-dimensions;
-  object-fit: cover;
+*[id^="image"] {
+  background-image: url('https://acre-image-collections.s3.amazonaws.com/image-6578722caea701702392364_medium.jpg'); 
+  background-size:cover;
+  width:22vw; 
+  height:22vw;
 }
 
 
