--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,28 +2,28 @@ $primary-color: #F50162;
 
 $grid-columns: 4;
 $gap: 2.5vw;
-$square-dimensions: 22vw;
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
+$square-dimensions: 20vw;
 
 #grid {
-  padding: 2vw;
-  width: 100%;
-  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding: 5vw;
 }
 
 *[id^="image"] {
   background-image: url('https://acre-image-collections.s3.amazonaws.com/image-6578722caea701702392364_medium.jpg'); 
   background-size:cover;
-  width:22vw; 
-  height:22vw;
+  width: $square-dimensions; 
+  height: $square-dimensions;
 }
 
+*[id^="container"] {
+  margin: 1vw;
+}
 
-
+input[type="checkbox"]:checked + *[id^="image"] {
+  outline: 3px solid $primary-color;
+}
